# Craft

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: AddClangFormat.cmake  AddFormatTargets.cmake  run-clang-format.py
src/: CMakeLists.txt  config.h  main.cpp
src/craft/draw/: Character.cpp  Character.h  Crosshairs.cpp  Crosshairs.h  Cube.cpp  Cube.h  Item.cpp  Item.h  Lines.cpp  Lines.h  Plant.cpp  Plant.h  Render.cpp  Render.h  Shader.h  Sphere.cpp  Sphere.h  Text.cpp  Text.h  Triangles.cpp  Triangles.h  cube.cpp  cube.h
src/craft/interfaces/: ChatInterface.cpp  ChatInterface.h  DebugInterface.cpp  DebugInterface.h  Interface.cpp  Interface.h  Keys.h  SignInterface.cpp  SignInterface.h  WorldInterface.cpp  WorldInterface.h
src/craft/items/: Item.cpp  item.cpp
src/craft/multiplayer/: Auth.cpp  Client.cpp  Client.h  auth.cpp  auth.h  client.cpp
src/craft/physics/: Physics.cpp  Physics.h
src/craft/player/: KeyBindings.h  Player.cpp  Player.h
src/craft/session/: Session.cpp  Session.h  Window.cpp  Window.h  Worker.cpp  Worker.h  WorldSession.cpp  WorldSession.h
src/craft/support/: db.cpp  db.h  map.cpp  map.h  matrix.cpp  matrix.h  ring.cpp  ring.h
src/craft/util/: Logging.h  Util.cpp  Util.h  util.cpp  util.h
src/craft/world/: Attrib.h  Chunk.cpp  Chunk.h  Dimension.cpp  Dimension.h  Sign.cpp  Sign.h  State.cpp  State.h  Vec.h  Vec3.cpp  Vec3.h  World.cpp  World.h  world.cpp  world.h
